# spheres

./: .dockerignore  .editorconfig  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-linux.df  Dockerfile-windows.df  README.adoc  docker-compose.yml
src/: main.qml  main.rs
src/data/: config.rs  index.rs  mod.rs  reader.rs  repository.rs  updater.rs
src/interface/: _glium.rs  mod.rs  tests.rs
src/util/: errors.rs  event_loop.rs  mod.rs
src/util/event_loop/: _glium.rs  mod.rs  tests.rs
tests/: simple.rs
