[package]
name = "spheres"
version = "0.1.0"
authors = [ "pcummuskey <pcummuskey@bravurasolutions.com>" ]
publish = false

[[bin]]
name = "spheres"
path = "src/main.rs"

[dependencies]
conrod = "*"
notify = "*"
yaml-rust = "*"

[features]
default = [ "glium" ]
glium   = [ "conrod/winit", "conrod/glium" ]
piston  = [ "conrod/piston" ]

[dev-dependencies]
stainless = "*"
second_law = "*"
